--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "test": "mocha tests --recursive",
     "lint": "eslint ."
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "eslint": "~5.16.0",
+    "eslint": "~7.2.0",
     "eslint-plugin-eslint-plugin": "^2.1.0",
-    "eslint-plugin-node": "^10.0.0",
-    "mocha": "^3.1.2"
+    "eslint-plugin-node": "^11.1.0",
+    "mocha": "^8.0.1"
   },
   "engines": {
     "node": ">=10.0.0"
